# on-demand-downscaling

./: .gitignore  NEWS.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
on-demand_downscaling/: README.md  helpers.py  on_demand_downscaling.ipynb
on_demand_downscaling/: README.md  helpers.py  panel_app.py  panel_helpers.py
panel_app/: Dockerfile  docker-compose.yml  panel_app.py  readyz_plugin.py
panel_app/panel_UI/: config.py  email_results.py  panel_helpers.py  state.py  step0_email.py  step1_downscale.py  step1_email.py  step2_downscale.py  step2_output.py  step3_indices.py  step3_output.py  step4_indices.py  step4_summary.py  step5_summary.py  tasks.py  user_warnings.py  widgets.py  worker.py  wps_wrappers.py
panel_app/panel_UI/help_docs/: STEP0.md  STEP1.md  STEP2.md  STEP3.md  STEP4.md  STEP5.md
