[tool.poetry]
name = "on-demand-downscaling"
version = "0.1.0"
description = "A Jupyter Notebook facilitating the workflow for the on-demand downscaling project"
authors = ["Eric Yvorchuk <eyvorchuk@uvic.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
ipython = "^8.17.2"
birdhouse-birdy = "^0.8.7"
jupyterlab = "^4.2.1"
shapely = "^2.0.4"
netCDF4 = "^1.6.5"
requests-html = "^0.10.0"
ipywidgets = "^8.1.3"
ipyleaflet = "^0.19.1"
xarray = "^2024.5.0"
lxml-html-clean = "^0.1.1"
pyproj = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
