[tool.poetry]
name = "on-demand_downscaling"
version = "1.0.0"
description = "A Jupyter Notebook facilitating the workflow for the on-demand downscaling project"
authors = ["Eric Yvorchuk <eyvorchuk@uvic.ca>", "Quintin Sparks <quintins@uvic.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
ipython = ">=8.17.2"
birdhouse-birdy = ">=0.8.7"
jupyterlab = ">=4.2.1"
shapely = ">=2.0.4"
netCDF4 = ">=1.6.5"
requests-html = ">=0.10.0"
ipywidgets = ">=8.1.3"
ipyleaflet = ">=0.19.1"
xarray = ">=2023.1.0"
lxml-html-clean = ">=0.1.1"
pyproj = ">=3.6.1"
dask = ">=2024.5.2"
panel = ">=1.7.1"
notebook = ">=7.4.3"
ipywidgets-bokeh = ">=1.6.0"
jupyter-bokeh = ">=4.0.5"
bokeh = "^3.7.3"
python-dotenv = "^1.1.1"
rq = "^2.4.0"
redis = "^6.2.0"
rq-dashboard = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
